Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -28,7 +28,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "P_black = P_black_given_1 * P"
+   ]
   },
   {
    "cell_type": "markdown",
