Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_black = P_black_given_1 * P"
+    "P_black = P_black_given_1 * P_1 + P_black_given_2 * P_2"
    ]
   },
   {
