Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,8 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_1 = 1.2\n",
-    "P_black_given_1 = "
+    "P_1 = 1/2\n",
+    "P_black_given_1 = 4/10\n",
+    "P_2 = 1/2\n",
+    "{}"
    ]
   },
   {
