Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -25,33 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "P_1 = 1/2\n",
     "P_black_given_1 = 4/10\n",
     "P_2 = 1/2\n",
-    "{}"
+    "P_black_given_2 = 7/10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'P_black_given_1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-6a1946ed27b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mP_black\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mP_black_given_1\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mP_1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mP_black_given_2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mP_2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'P_black_given_1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "P_black = P_black_given_1 * P_1 + P_black_given_2 * P_2"
    ]
