Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,11 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.55"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "P_black = P_black_given_1 * P_1 + P_black_given_2 * P_2"
+    "P_black = P_black_given_1 * P_1 + P_black_given_2 * P_2\n",
+    "P_black"
    ]
   },
   {
