--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "bag1 = {'white':}\n",
+    "bag1 = {'marbles': np.arra}\n",
     "bag2 = None\n",
     "box  = None\n",
     "\n",
