--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "bag1 = {'marbles': np.array(['white', 'black']), ''}\n",
+    "bag1 = {'marbles': np.array(['white', 'black']), 'probs': np.array([])}\n",
     "bag2 = None\n",
     "box  = None\n",
     "\n",
