--- a/index.ipynb
+++ b/index.ipynb
@@ -83,8 +83,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "bag1 = {'marbles': np.array(['white', 'black']), 'probs': np.array([])}\n",
-    "bag2 = None\n",
+    "bag1 = {'marbles': np.array(['white', 'black']), 'probs': np.array([0.6, 0.4])}\n",
+    "bag2 = {}\n",
     "box  = None\n",
     "\n",
     "bag1, bag2, box\n",
