--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
     "import numpy as np\n",
     "bag1 = {'marbles': np.array(['white', 'black']), 'probs': np.array([0.6, 0.4])}\n",
     "bag2 = {'marbles': np.array(['white', 'black']), 'probs': np.array([0.3, 0.7])}\n",
-    "box  = {'bags': }\n",
+    "box  = {'bags': np.array(['bag1', 'bag'])}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
