--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "def sample_marble(box):\n",
     "    # randomly choose a bag \n",
-    "    np.random.choice()\n",
+    "    np.random.choice(box['bags'], p=box['probs'])\n",
     "    # randomly choose a marble \n",
     "    return none\n",
     "\n",
