--- a/index.ipynb
+++ b/index.ipynb
@@ -126,18 +126,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sample_marble(box):\n",
     "    # randomly choose a bag \n",
-    "    np.random.choice(box['bags'], p=box['probs'])\n",
+    "    box_choice = np.random.choice(box['bags'], p=box['probs'])\n",
     "    # randomly choose a marble \n",
-    "    return none\n",
+    "    return box_choice\n",
     "\n",
     "#sample_marble(box)\n",
     "# 'black' OR 'white'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_marb"
    ]
   },
   {
