--- a/index.ipynb
+++ b/index.ipynb
@@ -134,19 +134,31 @@
     "    # randomly choose a bag \n",
     "    box_choice = np.random.choice(box['bags'], p=box['probs'])\n",
     "    # randomly choose a marble \n",
+    "    mar\n",
     "    return box_choice\n",
-    "\n",
+    "    \n",
     "#sample_marble(box)\n",
     "# 'black' OR 'white'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marbles': array(['white', 'black'], dtype='<U5'), 'probs': array([0.6, 0.4])}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sample_marb"
+    "sample_marble(box)"
    ]
   },
   {
