--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
     "    # randomly choose a bag \n",
     "    box_choice = np.random.choice(box['bags'], p=box['probs'])\n",
     "    # randomly choose a marble \n",
-    "    mar\n",
+    "    marble_choice = np.random.choice()\n",
     "    return box_choice\n",
     "    \n",
     "#sample_marble(box)\n",
