Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,8 @@
     "    # randomly choose a bag \n",
     "    box_choice = np.random.choice(box['bags'], p=box['probs'])\n",
     "    # randomly choose a marble \n",
-    "    marble_choice = np.random.choice(box_choice['marbles'], p=)\n",
-    "    return box_choice\n",
+    "    marble_choice = np.random.choice(box_choice['marbles'], p=box_choice['probs'])\n",
+    "    return marble_choice\n",
     "    \n",
     "#sample_marble(box)\n",
     "# 'black' OR 'white'"
@@ -143,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'marbles': array(['white', 'black'], dtype='<U5'), 'probs': array([0.6, 0.4])}"
+       "'black'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
