--- a/index.ipynb
+++ b/index.ipynb
@@ -142,26 +142,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'black'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_marble(box)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,6 +156,8 @@
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
+    "    for i in range(num_samples):\n",
+    "        \n",
     "    # compute fraction of marbles of desired color \n",
     "    return none"
    ]
