--- a/index.ipynb
+++ b/index.ipynb
@@ -156,9 +156,11 @@
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
+    "    total_marbles = []\n",
     "    for i in range(num_samples):\n",
-    "        total_marbles.apsample_marble(box)\n",
+    "        total_marbles.append(sample_marble(box))\n",
     "    # compute fraction of marbles of desired color \n",
+    "    \n",
     "    return none"
    ]
   },
