Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,7 @@
     "    for i in range(num_samples):\n",
     "        total_marbles.append(sample_marble(box))\n",
     "    # compute fraction of marbles of desired color \n",
-    "    \n",
+    "    color_fraction = [sum(x)]\n",
     "    return none"
    ]
   },
