Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,8 +160,8 @@
     "    for i in range(num_samples):\n",
     "        total_marbles.append(sample_marble(box))\n",
     "    # compute fraction of marbles of desired color \n",
-    "    color_fraction = [sum(x)]\n",
-    "    return none"
+    "    color_fraction = [len(x) for x in total_marbles]\n",
+    "    return color_fraction"
    ]
   },
   {
