--- a/index.ipynb
+++ b/index.ipynb
@@ -150,9 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-28-b9fddb367a81>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-b9fddb367a81>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    color_fraction = len([1 for x in total_marbles where x = color])\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
@@ -160,1021 +169,22 @@
     "    for i in range(num_samples):\n",
     "        total_marbles.append(sample_marble(box))\n",
     "    # compute fraction of marbles of desired color \n",
-    "    color_fraction = [len(x) for x in total_marbles]\n",
+    "    color_fraction = len([1 for x in total_marbles where x = color])\n",
     "    return color_fraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5,\n",
-       " 5]"
+       "1000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
