Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,22 +160,22 @@
     "    for i in range(num_samples):\n",
     "        total_marbles.append(sample_marble(box))\n",
     "    # compute fraction of marbles of desired color \n",
-    "    color_fraction = len([1 for x in total_marbles if x == color])\n",
+    "    color_fraction = len([1 for x in total_marbles if x == color])/num_samples\n",
     "    return color_fraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "431"
+       "0.435"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
