Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,26 +165,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.435"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "probability_of_color('white', box)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,12 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.558"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# probability_of_color(\"black\", box, num_samples=100000)\n",
-    "\n",
+    "probability_of_color('black', box)\n",
     "\n",
     "# your answer should be very close to 0.55"
    ]
