Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change above code here "
+    "import numpy as np\n",
+    "bag1 = {'marbles': np.array(['white', 'black', 'g']), 'probs': np.array([0.6, 0.4])}\n",
+    "bag2 = {'marbles': np.array(['white', 'black']), 'probs': np.array([0.3, 0.7])}\n",
+    "box  = {'bags': np.array([bag1, bag2]), 'probs': np.array([1/2, 1/2])}\n",
+    "\n",
+    "bag1, bag2, box"
    ]
   },
   {
