Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,8 +222,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "bag1 = {'marbles': np.array(['white', 'black', 'g']), 'probs': np.array([0.6, 0.4])}\n",
-    "bag2 = {'marbles': np.array(['white', 'black']), 'probs': np.array([0.3, 0.7])}\n",
+    "bag1 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([6/15, 4/15, 5/15])}\n",
+    "bag2 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([0.3, 0.7])}\n",
     "box  = {'bags': np.array([bag1, bag2]), 'probs': np.array([1/2, 1/2])}\n",
     "\n",
     "bag1, bag2, box"
