--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "source": [
     "import numpy as np\n",
     "bag1 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([6/15, 4/15, 5/15])}\n",
-    "bag2 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([0.3, 0.7])}\n",
+    "bag2 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([3/15, 7/15, 5/15])}\n",
     "box  = {'bags': np.array([bag1, bag2]), 'probs': np.array([1/2, 1/2])}\n",
     "\n",
     "bag1, bag2, box"
