--- a/index.ipynb
+++ b/index.ipynb
@@ -217,14 +217,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'marbles': array(['white', 'black', 'gray'], dtype='<U5'),\n",
+       "  'probs': array([0.4       , 0.26666667, 0.33333333])},\n",
+       " {'marbles': array(['white', 'black', 'gray'], dtype='<U5'),\n",
+       "  'probs': array([0.2       , 0.46666667, 0.33333333])},\n",
+       " {'bags': array([{'marbles': array(['white', 'black', 'gray'], dtype='<U5'), 'probs': array([0.4       , 0.26666667, 0.33333333])},\n",
+       "         {'marbles': array(['white', 'black', 'gray'], dtype='<U5'), 'probs': array([0.2       , 0.46666667, 0.33333333])}],\n",
+       "        dtype=object), 'probs': array([0.66666667, 0.33333333])})"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "bag1 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([6/15, 4/15, 5/15])}\n",
     "bag2 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([3/15, 7/15, 5/15])}\n",
-    "box  = {'bags': np.array([bag1, bag2]), 'probs': np.array([1/2, 1/2])}\n",
+    "box  = {'bags': np.array([bag1, bag2]), 'probs': np.array([2/3, 1/3])}\n",
     "\n",
     "bag1, bag2, box"
    ]
