--- a/index.ipynb
+++ b/index.ipynb
@@ -217,6 +217,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P_gray = 5/15*2/3 + 5/15*1/3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
