Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,11 +217,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "P_gray = 5/15*2/3 + 5/15*1/3"
+    "P_gray = 5/15*2/3 + 5/15*1/3\n",
+    "P_gray"
    ]
   },
   {
@@ -262,7 +274,7 @@
    "outputs": [],
    "source": [
     "# probability_of_color(\"gray\", box, num_samples=100000)\n",
-    "\n",
+    "probability_of_\n",
     "\n",
     "\n",
     "# Very close to 0.33"
