--- a/index.ipynb
+++ b/index.ipynb
@@ -269,12 +269,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33353"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# probability_of_color(\"gray\", box, num_samples=100000)\n",
-    "probability_of_\n",
+    "probability_of_color('gray', box, num_samples = 100000)\n",
     "\n",
     "\n",
     "# Very close to 0.33"
