--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "        dtype=object), 'probs': array([0.5, 0.5])})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,23 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.558"
+       "0.33166"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# probability_of_color(\"black\", box, num_samples=100000)\n",
-    "probability_of_color('black', box)\n",
+    "probability_of_color('black', box, num_samples=100000)\n",
     "\n",
     "# your answer should be very close to 0.55"
    ]
