Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,11 @@
     "        total_marbles.append(sample_marble(box))\n",
     "    # compute fraction of marbles of desired color \n",
     "    color_fraction = len([1 for x in total_marbles if x == color])/num_samples\n",
-    "    return color_fraction"
+    "    return color_fraction\n",
+    "\n",
+    "    marbles = np.array([sample_marble(box) for ii in range(num_samples)])\n",
+    "    # compute fraction of marbles of desired color \n",
+    "    return np.sum(marbles == color) / num_samples"
    ]
   },
   {
